--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1064,14 +1064,8 @@ jobs:
         if: needs.file-check.outputs.run == 'true'
         with:
           submodules: recursive
-      # We need to handle dependencies in two passes because MSYS2 kills
-      # itself to force a restart if certain parts get updated.
-      - name: Set Up Dependencies (First Pass)
-        id: deps-1
-        if: needs.file-check.outputs.run == 'true'
-        run: ./packaging/windows/install-dependencies.ps1
-      - name: Set Up Dependencies (Second Pass)
-        id: deps-2
+      - name: Set Up Dependencies
+        id: deps
         if: needs.file-check.outputs.run == 'true'
         run: ./packaging/windows/install-dependencies.ps1
       - name: Build Netdata
