--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1064,6 +1064,7 @@ jobs:
         if: needs.file-check.outputs.run == 'true'
         with:
           submodules: recursive
+          lfs: true
       - name: Set Up Dependencies
         id: deps
         if: needs.file-check.outputs.run == 'true'
@@ -1083,7 +1084,6 @@ jobs:
           name: windows-x86_64-installer
           path: packaging\windows\netdata-installer.exe
           retention-days: 30
-
 
   updater-check: # Test the generated dist archive using the updater code.
     name: Test Generated Distfile and Updater Code
