go.d megacli: add bbu abs charge

--- a/src/go/plugin/go.d/modules/megacli/metadata.yaml
+++ b/src/go/plugin/go.d/modules/megacli/metadata.yaml
@@ -157,6 +157,12 @@ modules:
             - name: battery_type
               description: Battery type (e.g. BBU)
           metrics:
+            - name: megacli.bbu_absolute_charge
+              description: BBU absolute charge
+              unit: percentage
+              chart_type: area
+              dimensions:
+                - name: charge
             - name: megacli.bbu_relative_charge
               description: BBU relative charge
               unit: percentage
