--- a/src/health/health.d/megacli.conf
+++ b/src/health/health.d/megacli.conf
@@ -48,8 +48,8 @@ component: RAID
 
 # Backup Battery Unit
 
- template: megacli_bbu_charge
-       on: megacli.bbu_charge
+ template: megacli_bbu_absolute_charge
+       on: megacli.bbu_absolute_charge
     class: Workload
      type: System
 component: RAID
