--- a/src/go/plugin/go.d/config/go.d/sd/docker.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/docker.conf
@@ -43,7 +43,7 @@ classify:
       - tags: "lighttpd"
         expr: '{{ match "sp" .Image "*/lighttpd */lighttpd:*" }}'
       - tags: "memcached"
-        expr: '{{ or (eq .PrivatePort "11211") (match "sp" .Image "*/memcached */memcached:*") }}'
+        expr: '{{ or (eq .PrivatePort "11211") (match "sp" .Image "memcached memcached:* */memcached */memcached:*") }}'
       - tags: "mongodb"
         expr: '{{ or (eq .PrivatePort "27017") (match "sp" .Image "mongo mongo:* */mongodb */mongodb:* */mongodb-community-server */mongodb-community-server:*") }}'
       - tags: "mysql"
