--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -71,7 +71,7 @@ classify:
       - tags: "logstash"
         expr: '{{ and (eq .Port "9600") (glob .Cmdline "*logstash*") }}'
       - tags: "memcached"
-        expr: '{{ and (eq .Port "11211") (eq .Comm "memcached") }}'
+        expr: '{{ or (eq .Port "11211") (eq .Comm "memcached") }}'
       - tags: "mongodb"
         expr: '{{ or (eq .Port "27017") (eq .Comm "mongod") }}'
       - tags: "mysql"
