fix listeners tomcat entry

--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -107,7 +107,7 @@ classify:
       - tags: "supervisord"
         expr: '{{ and (eq .Port "9001") (eq .Comm "supervisord") }}'
       - tags: "tomcat"
-        expr: '{{ and (eq .Port "8080") (eq .Comm "tomcat") }}'
+        expr: '{{ and (eq .Port "8080") (glob .Cmdline "*tomcat*") }}'
       - tags: "traefik"
         expr: '{{ and (eq .Port "80" "8080") (eq .Comm "traefik") }}'
       - tags: "unbound"
