simplify and improve charts

--- a/src/go/plugin/go.d/config/go.d/sd/docker.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/docker.conf
@@ -207,7 +207,7 @@ compose:
         template: |
           module: tomcat
           name: docker_{{.Name}}
-          url: http://{{.Address}}/manager/status?XML=true
+          url: http://{{.Address}}
       - selector: "vernemq"
         template: |
           module: vernemq
