--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -423,7 +423,7 @@ compose:
         template: |
           module: tomcat
           name: local
-          url: http://{{.Address}}/manager/status?XML=true
+          url: http://{{.Address}}
       - selector: "unbound"
         template: |
           module: unbound
